--- a/style.css
+++ b/style.css
@@ -17,8 +17,9 @@ body {
 h1 {
      color: var(--secondary-color);
      text-align: center;
-     margin: 1rem;
+     margin: .8rem;
      text-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.441);
+     animation: zoom-in 3s infinite;
 }
 
 .container {
@@ -32,8 +33,8 @@ h1 {
 #input,
 #output {
      width: 70%;
-     height: 220px;
-     padding: 1.5rem;
+     height: 200px;
+     padding: 1.35em;
      margin: 1rem;
      border-radius: 0.8rem;
      outline: none;
@@ -63,22 +64,17 @@ h1 {
 }
 
 footer {
-     bottom: 0;
-     width: 100%;
+     position: relative;
      text-align: center;
      padding: 1rem;
      font-size: 1.1rem;
 }
 
-h2 {
-     color: var(--secondary-color);
-     text-align: center;
-     text-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.441);
-}
-
 p {
      color: var(--secondary-color);
-     text-align: center;
+     font-size: 1.2rem;
+     font-weight: bold;
+     text-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.441);
 }
 
 a {
@@ -121,4 +117,59 @@ select {
      color: var(--secondary-color);
      padding: .5rem 1.3rem;
 
+}
+
+/* keyframe zoom in zoom out */
+@keyframes zoom-in {
+     0% {
+          transform: scale(.5);
+     }
+
+     100% {
+          transform: scale(1);
+     }
+
+}
+
+
+/* Media Query */
+
+@media screen and (max-width: 1100px) {
+     h1 {
+          font-size: 4rem;
+     }
+
+     .select p {
+          font-size: 2.2rem;
+     }
+
+     select {
+          font-size: 2.2rem;
+     }
+
+     #input,
+     #output {
+          width: 85%;
+          height: 700px;
+          font-size: 2rem;
+          margin: 2rem;
+     }
+
+     #btn {
+          font-size: 3rem;
+          padding: 1rem 2rem;
+     }
+
+     p {
+          font-size: 2rem;
+     }
+
+     footer {
+          text-align: center;
+          font-size: 3rem;
+          position: bottom;
+          bottom: 0;
+          padding: 3rem;
+          width: 100%;
+     }
 }
