--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ h1 {
 #input,
 #output {
      width: 70%;
-     height: 200px;
-     padding: 1.35em;
+     height: 30vh;
+     padding: 1.5em;
      margin: 1rem;
      border-radius: 0.8rem;
      outline: none;
@@ -63,25 +63,6 @@ h1 {
      color: var(--secondary-color);
 }
 
-footer {
-     position: relative;
-     text-align: center;
-     padding: 1rem;
-     font-size: 1.1rem;
-}
-
-p {
-     color: var(--secondary-color);
-     font-size: 1.2rem;
-     font-weight: bold;
-     text-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.441);
-}
-
-a {
-     text-decoration: none;
-     color: var(--secondary-color);
-}
-
 .select {
      outline: none;
      border: none;
@@ -92,6 +73,7 @@ a {
      border-radius: 0.5rem;
      background-color: var(--secondary-color);
      box-shadow: 0 0 0.5rem black;
+     margin-bottom: .5rem;
 }
 
 .select p {
@@ -117,6 +99,39 @@ select {
      color: var(--secondary-color);
      padding: .5rem 1.3rem;
 
+
+
+
+}
+
+
+
+/*------------------- FOOTER ------------------- */
+
+footer {
+     position: absolute;
+     text-align: center;
+     padding: 1rem;
+     bottom: 0;
+     display: flex;
+     font-size: 1.1rem;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     align-content: center;
+     flex-wrap: nowrap;
+     width: 100%;
+}
+
+p {
+     color: var(--secondary-color);
+     font-size: 1.2rem;
+     font-weight: bold;
+     text-shadow: 0 0 0.69em rgba(0, 0, 0, 0.441);
+}
+
+a {
+     text-decoration: none;
 }
 
 /* keyframe zoom in zoom out */
@@ -167,9 +182,8 @@ select {
      footer {
           text-align: center;
           font-size: 3rem;
-          position: bottom;
-          bottom: 0;
           padding: 3rem;
           width: 100%;
+          position: inherit;
      }
 }
