--- a/style.css
+++ b/style.css
@@ -1,12 +1,28 @@
 :root {
      --primary-color: #F2C94C;
-     --secondary-color: green;
+     --secondary-color: rgb(35, 35, 232);
 }
 
 * {
      margin: 0;
      padding: 0;
      box-sizing: border-box;
+}
+
+body::after {
+     content: "";
+     position: fixed;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+     z-index: -1;
+     opacity: 0.9;
+     background-image: url("/assets/minions.png");
+     background-size: cover;
+     background-position: center;
+     background-repeat: no-repeat;
+     -webkit-filter: blur(5px);
 }
 
 body {
@@ -19,7 +35,6 @@ h1 {
      text-align: center;
      margin: .8rem;
      text-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.441);
-     animation: zoom-in 3s infinite;
 }
 
 .container {
@@ -63,49 +78,6 @@ h1 {
      color: var(--secondary-color);
 }
 
-.select {
-     outline: none;
-     border: none;
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     flex-direction: row;
-     border-radius: 0.5rem;
-     background-color: var(--secondary-color);
-     box-shadow: 0 0 0.5rem black;
-     margin-bottom: .5rem;
-}
-
-.select p {
-     color: var(--primary-color);
-     margin: 0 1rem;
-     font-size: 1.3rem;
-}
-
-select {
-     padding: .5rem 1.3rem;
-     margin: .5rem;
-     border-radius: 0.5rem;
-     background-color: transparent;
-     font-size: 1.3rem;
-     outline: none;
-     border: none;
-     color: var(--primary-color);
-     box-shadow: 0 0 0.5rem black;
-}
-
-.select option {
-     background-color: var(--primary-color);
-     color: var(--secondary-color);
-     padding: .5rem 1.3rem;
-
-
-
-
-}
-
-
-
 /*------------------- FOOTER ------------------- */
 
 footer {
@@ -143,7 +115,6 @@ a {
      100% {
           transform: scale(1);
      }
-
 }
 
 
@@ -152,14 +123,6 @@ a {
 @media screen and (max-width: 1100px) {
      h1 {
           font-size: 4rem;
-     }
-
-     .select p {
-          font-size: 2.2rem;
-     }
-
-     select {
-          font-size: 2.2rem;
      }
 
      #input,
